Enregistrement du code actuellement avant grosse mise à jours structurelle et graphique

--- a/front-end/my-first-vue-cli-app/src/style/pages/_signup.scss
+++ b/front-end/my-first-vue-cli-app/src/style/pages/_signup.scss
@@ -1,4 +1,3 @@
-
 .inscription {
 
     header .dropdown {
@@ -139,5 +138,8 @@
                 align-items: center;
             }
         }
+    }
+    .container_footer {
+        background-color: $accent-color;
     }
 }
