--- a/front-end/my-first-vue-cli-app/src/style/utils/_variables.scss
+++ b/front-end/my-first-vue-cli-app/src/style/utils/_variables.scss
@@ -1,7 +1,7 @@
 //Ici sont déclarées les varaibales utilisées sur le site
 
 //couleur de fond
-$background-color: #ecf0f3;
+$background-color: #B9B7BD;
 
 //couleur principale
 $primary-color: #0E3D59;
