--- a/front-end/my-first-vue-cli-app/src/style/base/_reset.scss
+++ b/front-end/my-first-vue-cli-app/src/style/base/_reset.scss
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: $background-color;
+    //background-color: $background-color;
 
     :focus {
         //border on focus
