--- a/front-end/my-first-vue-cli-app/src/style/style.css
+++ b/front-end/my-first-vue-cli-app/src/style/style.css
@@ -21,8 +21,6 @@ main {
 
 .bloc {
   border-radius: 10px;
-  -webkit-box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
-          box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
 }
 
 @media screen and (min-width: 767px) {
@@ -87,105 +85,17 @@ header .logo {
   max-width: 60%;
 }
 
-header .dropdown__btn {
-  cursor: pointer;
-}
-
-header .dropdown__content {
-  display: none;
-  position: absolute;
-  right: 0;
-  top: 100px;
-  background-color: #ecf0f3;
-  padding: 10px 60px 10px 10px;
-}
-
-@media only screen and (max-width: 767px) {
-  header .dropdown__content {
-    top: 90px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  header .dropdown__content {
-    min-width: 250px;
-    max-width: 40vw;
-  }
-}
-
-@media only screen and (max-width: 420px) {
-  header .dropdown__content {
-    width: 85vw;
-  }
-}
-
-header .dropdown__content__text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-}
-
-header .dropdown__content__text p {
-  font-family: Raleway, sans-serif;
-  font-size: 22px;
-  font-weight: 700;
-  color: #091f43;
-  margin-bottom: 20px;
-}
-
-@media only screen and (max-width: 767px) {
-  header .dropdown__content__text p {
-    font-size: 18px;
-  }
-}
-
-header .dropdown__content__text .custom-file-upload {
-  display: inline-block;
-  position: relative;
-  height: 45px;
-  line-height: 45px;
-  padding: 0 5px;
-  margin-top: 10px;
-}
-
-header .dropdown__content__text .custom-file-upload:hover {
-  background-color: #d1d9e6;
-}
-
-header .dropdown__content__text .custom-file-upload input[type="file"] {
-  position: absolute;
-  left: 0;
-  opacity: 0;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-}
-
-header .dropdown__content__text .custom-file-upload span {
-  background-color: transparent;
-}
-
-header .dropdown__content__text a {
-  display: inline-block;
-  height: 45px;
-  line-height: 45px;
-  padding: 0 5px;
-  text-decoration: none;
-}
-
-header .dropdown__content__text a:hover {
-  background-color: #d1d9e6;
-}
-
 header .show {
   display: block;
+}
+
+.footer {
+  margin: 50px;
+  background-color: blue;
+}
+
+.footer .menu_list {
+  list-style-type: none;
 }
 
 body {
@@ -255,8 +165,38 @@ body {
   margin: 1em;
 }
 
-.inscription header .dropdown {
-  display: none;
+.inscription .bloc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.inscription .main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.inscription .signup {
+  background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 25px;
+  padding: 20px;
+}
+
+.inscription form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .inscription form input,
@@ -269,7 +209,6 @@ body {
 }
 
 .inscription form input {
-  max-width: 100%;
   width: 100%;
 }
 
@@ -288,6 +227,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .inscription form .container div {
@@ -302,12 +244,12 @@ body {
 }
 
 .inscription form :nth-child(2) {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .inscription form .name {
@@ -321,6 +263,10 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.inscription form .name :nth-child(1) {
+  margin-right: 20px;
 }
 
 .inscription form .passwordLine {
@@ -392,8 +338,6 @@ body {
   width: -moz-max-content;
   width: max-content;
   border-radius: 10px;
-  -webkit-box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
-          box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
   height: 50px;
   margin: 10px 0;
   padding: 10px 20px;
@@ -408,17 +352,18 @@ body {
           align-items: center;
 }
 
-.inscription .container_footer {
-  background-color: #091f43;
-}
-
 button {
-  height: 50px;
   padding: 10px 20px;
   border: none;
-  -webkit-box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
-          box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
+  background-color: #ffffff;
   border-radius: 10px;
+  -webkit-transition-duration: 1000ms;
+          transition-duration: 1000ms;
+}
+
+button:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 .formSubmit {
@@ -731,7 +676,6 @@ textarea:focus {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-color: #ecf0f3;
 }
 
 * :focus {
